# nc

./: .coveragerc  .gitignore  .travis.yml  404.html  CHANGELIST  MANIFEST.in  README.md  README.rst  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  setup.py  swatches.md  test_requirements.txt  tox.ini
docs/: index.md
docs/swatches/: contrast-bright-to-dark.md  contrast-dark-to-bright.md  gray-000-sort-by-hsv.md  gray-000-sort-by-name.md  gray-000-sort-by-vhs.md  gray-025-sort-by-hsv.md  gray-025-sort-by-name.md  gray-025-sort-by-vhs.md  gray-050-sort-by-hsv.md  gray-050-sort-by-name.md  gray-050-sort-by-vhs.md  gray-075-sort-by-hsv.md  gray-075-sort-by-name.md  gray-075-sort-by-vhs.md  gray-100-sort-by-hsv.md  gray-100-sort-by-name.md  gray-100-sort-by-vhs.md  index.md
extract_nc/: ansi_escape_code.py  extract_color.py  extract_colors.py  extract_requirements.txt  process_line.py  terminal_colors.py  to_table.py  wikipedia.py
nc/: CHANGELIST  __init__.py  __main__.py  _color.py  _colors.py  _util.py  color.py  colors.py  colors2.py  default.py  demo.py  juce.py  old_util.py  table.py  tables.py  terminal.py  to_color.py  util.py  wikipedia.py
nc/palette/: _terminal256.py  html.py  juce.py  pwg.py  terminal256.py  terminal8.py  wikipedia.py  x11.py
nc/palette/terminal16/: __init__.py  mirc.py  putty.py  terminal_app.py  ubuntu.py  vga.py  visual_studio_code.py  windows_10_console.py  windows_console.py  windows_powershell.py  x.py  xterm.py
nc/schemes/: _terminal16.py  _terminal256.py  escapes.py  html.py  juce.py  pwg.py  terminal.py  terminal16.py  terminal256.py  terminal8.py  wikipedia.py  x11.py
nc/schemes/terminal16/: putty.py  vga.py  windows_console.py  x.py  xterm.py
nc_maintenance/: ansi_escape_code.py  color_source.py  extract_color.py  extract_requirements.txt  terminal_colors.py  wikipedia.py  write_swatches.py
scripts/: pync  to_table.py
swatches/: index.html
swatches/contrast-bright-to-dark/: index.html
swatches/contrast-dark-to-bright/: index.html
swatches/gray-000-sort-by-hsv/: index.html
swatches/gray-000-sort-by-name/: index.html
swatches/gray-000-sort-by-vhs/: index.html
swatches/gray-025-sort-by-hsv/: index.html
swatches/gray-025-sort-by-name/: index.html
swatches/gray-025-sort-by-vhs/: index.html
swatches/gray-050-sort-by-hsv/: index.html
swatches/gray-050-sort-by-name/: index.html
swatches/gray-050-sort-by-vhs/: index.html
swatches/gray-075-sort-by-hsv/: index.html
swatches/gray-075-sort-by-name/: index.html
swatches/gray-075-sort-by-vhs/: index.html
swatches/gray-100-sort-by-hsv/: index.html
swatches/gray-100-sort-by-name/: index.html
swatches/gray-100-sort-by-vhs/: index.html
test/nc/: _colors_test.py  _module_test.py  _util_test.py  color_test.py  colors2_test.py  colors_test.py  main_test.py  module_test.py  palette_test.py  print_mocker.py  results_printer.py  scheme_test.py  terminal_test.py  test_all.py  test_color.py  test_colors.py  test_custom_colors.py  test_demo.py  test_main.py  test_module.py  test_palette.py  test_terminal.py  util_test.py
test/nc/nc/: color_test.py  table_test.py
