[tool.poetry]
name = "nc"
version = "1.0.2"
description = "🎨 Named colors in Python 🎨"
authors = ["Tom Ritchford <tom@swirly.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rec/nc"
homepage = "https://github.com/rec/nc"
documentation = "https://rec.github.io/nc"

[tool.poetry.dependencies]
python = ">=3.8"
xmod = "*"

[tool.poetry.group.dev.dependencies]
coverage = "*"
mypy = "*"
pytest = "*"
ruff = "*"
impall = "*"
pyfakefs = "*"
beautifulsoup4 = "*"
requests = "*"
safer = "*"
lxml = "*"

[tool.coverage]
[tool.coverage.run]
branch = true
source = ["nc/"]

[tool.coverage.report]
fail_under = 100
skip_covered = true
exclude_lines = ["pragma: no cover", "if False:", "if __name__ == .__main__.:", "raise NotImplementedError"]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
