[project]
name = "nc"
version = "1.0.2"
description = "🎨 Named colors in Python 🎨"
authors = [{ name = "Tom Ritchford", email = "tom@swirly.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["xmod"]

[project.urls]
Homepage = "https://github.com/rec/nc"
Repository = "https://github.com/rec/nc"
Documentation = "https://rec.github.io/nc"

[dependency-groups]
dev = [
    "coverage",
    "pytest",
    "ruff",
    "impall",
    "pyfakefs",
    "beautifulsoup4",
    "requests",
    "safer",
    "lxml",
    "pyupgrade>=3.21.2",
    "ty>=0.0.14",
]

[tool.uv]

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"
[tool.coverage.run]
branch = true
source = ["nc/"]

[tool.coverage.report]
fail_under = 100
skip_covered = true
exclude_lines = ["pragma: no cover", "if False:", "if __name__ == .__main__.:", "raise NotImplementedError"]

[tool.mypy]
strict = true
